# smart-news-ml

./: .envrc  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
mongo-init/: article_predictions.json  articles.json  deployments.json  import.sh  metrics.json  predictors.json
scripts/: push_articles_to_queue.py  sentiment_analysis.py
src/: container.py  debug.py  main.py  setup.py
src/api/mappers/: traffic_mappers.py
src/api/routes/: traffic_routers.py
src/api/schemas/: traffic_schemas.py
src/core/: logger.py  logging_filters.py  settings.py
src/database/: __init__.py  client.py
src/database/repositories/: articles_predictions_repository.py  articles_repository.py  base_respository.py  deployment_repository.py  metrics_repository.py  ml_deployment_repository.py  ml_metrics_repository.py  ml_predictor_repository.py  predictor_repository.py
src/events/: __init__.py  event_bus.py  event_types.py
src/events/handlers/: __init__.py  articles_handler.py  metrics_handler.py
src/ml/: ml_predictor_manager.py  ml_predictor_models.py
src/ml/mappers/: ml_predictor_mapper.py
src/predictors/: base_predictor.py
src/predictors/predictors/: news_classification_v1.py  news_classification_v2.py  sentiment_analysis_predictor_v1.py  sentiment_analysis_predictor_v2.py
src/services/: article_service.py  base_predictor_service.py  deployment_service.py  metrics_service.py  predictor_service.py
src/services/mappers/: articles_mapper.py  deployment_mapper.py  metrics_mapper.py  predictor_mapper.py
src/utils/: traffic_distribution_utils.py
(+13 files in other folders)
