[project]
name = "smart-news-ml"
version = "0.1.0"
description = ""
authors = [
    {name = "antoine.prieur45@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "transformers (>=4.52.4,<5.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "dependency-injector (>=4.48.0,<5.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "types-redis (>=4.6.0.20241004,<5.0.0.0)",
    "accelerate (>=1.8.1,<2.0.0)"
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"
black = "^25.1.0"
pytest = "^8.4.0"
debugpy = "^1.8.14"
ruff-lsp = "^0.0.62"
notebook = "^7.4.3"
ipywidgets = "^8.1.7"
bitsandbytes = "^0.46.0"
accelerate = "^1.7.0"

